feat: Se agrega la estructura que contiene el metadata al swagger udistrital/sisifo_documentacion#206
