# swagger/swagger.json
@@ -82,7 +82,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.PeriodoRolUsuario"
+                                "$ref": "#/definitions/models.MetadataResponse"
                             }
                         }
                     },
@@ -163,7 +163,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.PeriodoRolUsuario"
+                                "$ref": "#/definitions/models.MetadataResponse"
                             }
                         }
                     },
@@ -268,7 +268,15 @@
         }
     },
     "definitions": {
-        "2346.0x1400033af90.false": {
+        "2274.0x140002db380.false": {
+            "title": "false",
+            "type": "object"
+        },
+        "377.0x140002daed0.false": {
+            "title": "false",
+            "type": "object"
+        },
+        "645.0x140002daf00.false": {
             "title": "false",
             "type": "object"
         },
@@ -278,6 +286,31 @@
             "properties": {
                 "numero": {
                     "type": "string"
+                }
+            }
+        },
+        "models.MetadataResponse": {
+            "title": "MetadataResponse",
+            "type": "object",
+            "properties": {
+                "Data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Periodo"
+                    }
+                },
+                "Message": {
+                    "type": "string"
+                },
+                "Metadata": {
+                    "$ref": "#/definitions/models.any"
+                },
+                "Status": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Success": {
+                    "type": "boolean"
                 }
             }
         },
@@ -311,37 +344,37 @@
                 }
             }
         },
-        "models.PeriodoRolUsuario": {
-            "title": "PeriodoRolUsuario",
+        "models.Periodo": {
+            "title": "Periodo",
             "type": "object",
             "properties": {
-                "correo": {
-                    "type": "string"
-                },
-                "documento": {
-                    "type": "string"
-                },
-                "estado": {
+                "Activo": {
                     "type": "boolean"
                 },
-                "fecha_final": {
+                "FechaCreacion": {
                     "type": "string"
                 },
-                "fecha_inicial": {
+                "FechaFin": {
                     "type": "string"
                 },
-                "finalizado": {
+                "FechaInicio": {
+                    "type": "string"
+                },
+                "FechaModificacion": {
+                    "type": "string"
+                },
+                "Finalizado": {
                     "type": "boolean"
                 },
-                "id_periodo": {
+                "Id": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "nombre": {
-                    "type": "string"
+                "RolId": {
+                    "$ref": "#/definitions/645.0x140002daf00.false"
                 },
-                "rol_usuario": {
-                    "type": "string"
+                "UsuarioId": {
+                    "$ref": "#/definitions/377.0x140002daed0.false"
                 }
             }
         },
@@ -350,7 +383,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/2346.0x1400033af90.false"
+                    "$ref": "#/definitions/2274.0x140002db380.false"
                 },
                 "message": {
                     "type": "string"
@@ -414,6 +447,10 @@
                     "type": "string"
                 }
             }
+        },
+        "models.any": {
+            "title": "any",
+            "type": "object"
         }
     },
     "tags": [
